dh-make-perl (0.64) UNRELEASED; urgency=low

  * DhMakePerl: drop unused extract_changelog()
  * DhMakePerl: fix_rules() replaced with update_file_list() for updating
    examples and docs and checks for deprecated/obsolete entries in
    DhMakePerl::Config
  * when finding dist version, convert "v1.002003" as "1.2.3"
  * --directory now accepts an optional directory argument
  * document that override mechanism is not used with --refresh
  * add tests for --refresh
  * when a required dependency is not found, scan WNPP for a corresponding ITP
  * do not die when WNPP can't be checked for ITPs
  * add --network option (defaults to true)
  * rewrite get_itp() as get_wnpp()
    + looks for all kinds of WNPP bugs
    + uses the lists on http://www.debian.org/devel/wnpp
  * add --source-format option (defaults to "1.0")

 -- Damyan Ivanov <dmn@debian.org>  Fri, 05 Feb 2010 09:05:25 +0200

dh-make-perl (0.63) unstable; urgency=low

  [ Brian Cassidy ]
  * Add Array::Unique to dependencies listed in Build.PL.

  [ Damyan Ivanov ]
  * Create packages with Standards-Version: 3.8.4
  * control: Standards-Version: 3.8.4 (no changes needed)
  * when checking for XS presence, ignore example/test/documentation
    directories

 -- Damyan Ivanov <dmn@debian.org>  Mon, 01 Feb 2010 12:00:11 +0200

dh-make-perl (0.62) unstable; urgency=low

  [ Damyan Ivanov ]
  * tighten matching READMEs a bit; Closes: #560165
  * while looking for docs, do not delve into SVN and GIT dirs
  * add perl (>= 5.10.1) as a preferred alternative (build) dependency to
    libmodule-corelist-perl (>= 2.14) and libtest-simple-perl (>= 0.82)
  * replace the hard-coded default to /etc/apt/sources.list with querying
    AptPkg's Config about possible sources.list files. Closes: #557961
  * call AptPkg::Config::_config->init before asking for configuration details
  * bump perl (build-) dependencies to 5.10 as we use language features not
    found in 5.8

  [ gregor herrmann ]